# stick-slip

./: .gitignore  .sesskey  CONCEPTS_PYTHON.md  CONCEPTS_SIGNAL.md  DESIGN.md  GUIDE.md  README.md  WALKTHROUGH.md  config.toml  pyproject.toml  test.csv
stickslip/: __init__.py  __main__.py  assessment.py  buffer.py  campbell.py  cli.py  config.py  dashboard.py  display.py  dwis.py  energy.py  history.py  mitigation.py  pipeline.py  report.py  shell.py  sidebands.py  ssi.py  transforms.py  tui.py  types.py  webui.py
tests/: test_cli_routing.py  test_config.py  test_core.py  test_dashboard.py  test_energy.py  test_mitigation.py  test_sidebands.py  test_tui.py  test_webui.py
tools/: generate_test_data.py
